# py-converter-sound-to-spectro

./: .gitignore  .pylint.toml  .pylintrc  LICENSE  README.md  converter.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  pylint.yml
py_converter_s_to_s/: converter.py
