[project]
name = "py-converter-s-to-s"
version = "0.8.1"
description = "From a sound file, draw a spectrogram trough a GUI"
authors = [
    {name = "Bolol", email = "43433312+BololZ@users.noreply.github.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "librosa (>=0.11.0,<0.12.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "pyqt6 (>=6.11.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.5"

[tool.poetry]
package-mode = false
